force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee Information</label>
    <nameField>
        <label>English Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>