force-app/main/default/objects/Employee__c/fields/AnnualLeaveCurrentYearRemain__c.field-meta.xml
<CustomField>
    <fullName>AnnualLeaveCurrentYearRemain__c</fullName>
    <formula>WorkCycle__r.Annual_Leave_Current_Year_Remain_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leave - Current Year Remain</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>