force-app/main/default/objects/Employee__c/fields/AnnualLeaveLastYearRemain__c.field-meta.xml
<CustomField>
    <fullName>AnnualLeaveLastYearRemain__c</fullName>
    <formula>WorkCycle__r.Annual_Leave_Last_Year_Remain_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leave - Last Year Remain</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>