force-app/main/default/objects/Employee__c/fields/Bank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Name__c</fullName>
    <label>Bank Branch Name</label>
    <type>TextArea</type>
</CustomField>