force-app/main/default/objects/Employee__c/fields/Beneficiary_Bank__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank__c</fullName>
    <label>Beneficiary Bank</label>
    <type>TextArea</type>
</CustomField>