force-app/main/default/objects/Employee__c/fields/BirthDay__c.field-meta.xml
<CustomField>
    <fullName>BirthDay__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>