force-app/main/default/objects/Employee__c/fields/BusinessTravelinaYear__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelinaYear__c</fullName>
    <label>Business Travel in a Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>