force-app/main/default/objects/Employee__c/fields/check_Last_day_of_month__c.field-meta.xml
<CustomField>
    <fullName>check_Last_day_of_month__c</fullName>
    <formula>IF(TODAY()=
IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check Last day of month</label>
    <type>Checkbox</type>
</CustomField>