force-app/main/default/objects/Employee__c/fields/EmergencyContactName__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContactName__c</fullName>
    <label>Emergency Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>