force-app/main/default/objects/Employee__c/fields/EmergencyPhone__c.field-meta.xml
<CustomField>
    <fullName>EmergencyPhone__c</fullName>
    <label>Emergency Phone</label>
    <type>Phone</type>
</CustomField>