force-app/main/default/objects/Employee__c/fields/EmergencyRole__c.field-meta.xml
<CustomField>
    <fullName>EmergencyRole__c</fullName>
    <label>Emergency Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>