force-app/main/default/objects/Employee__c/fields/Employee_Contract__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Contract</label>
    <referenceTo>Employee_Contract__c</referenceTo>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>