force-app/main/default/objects/Employee__c/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <label>Employee Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>