force-app/main/default/objects/Employee__c/fields/Formula_Position_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Position_Text__c</fullName>
    <formula>Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>