force-app/main/default/objects/Employee__c/fields/IDIssusedby__c.field-meta.xml
<CustomField>
    <fullName>IDIssusedby__c</fullName>
    <label>ID Issused by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>