force-app/main/default/objects/Employee__c/fields/IDIssusedon__c.field-meta.xml
<CustomField>
    <fullName>IDIssusedon__c</fullName>
    <label>ID Issused on</label>
    <type>Date</type>
</CustomField>