force-app/main/default/objects/Employee__c/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <label>ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>