force-app/main/default/objects/Employee__c/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>Insurancepolicy__c</referenceTo>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>