force-app/main/default/objects/Employee__c/fields/Last_day_of_quarter__c.field-meta.xml
<CustomField>
    <fullName>Last_day_of_quarter__c</fullName>
    <formula>If(
OR( 
AND( Day(Today()) = 30, month( Today()) = 3),
AND( Day(Today()) = 30, month( Today()) = 6),
AND( Day(Today()) = 30, month( Today()) = 9),
AND( Day(Today()) = 30, month( Today()) = 12)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last day of quarter</label>
    <type>Checkbox</type>
</CustomField>