force-app/main/default/objects/Employee__c/fields/Name_Flow__c.field-meta.xml
<CustomField>
    <fullName>Name_Flow__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Flow</label>
    <type>Text</type>
</CustomField>