force-app/main/default/objects/Employee__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>South Korean</fullName>
            </value>
            <value>
                <fullName>North Korean</fullName>
            </value>
            <value>
                <fullName>Cambodian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>