force-app/main/default/objects/Employee__c/fields/Number_of_dependents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_dependents__c</fullName>
    <label>Number of dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>