force-app/main/default/objects/Employee__c/fields/Permanentaddress__c.field-meta.xml
<CustomField>
    <fullName>Permanentaddress__c</fullName>
    <label>Permanent address</label>
    <type>TextArea</type>
</CustomField>