force-app/main/default/objects/Employee__c/fields/PersonalTaxCode__c.field-meta.xml
<CustomField>
    <fullName>PersonalTaxCode__c</fullName>
    <label>Personal Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>