force-app/main/default/objects/Employee__c/fields/ReportTo__c.field-meta.xml
<CustomField>
    <fullName>ReportTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report to</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Information</relationshipLabel>
    <relationshipName>Employee_Information</relationshipName>
    <type>Lookup</type>
</CustomField>