force-app/main/default/objects/Employee__c/fields/Salarypolicy__c.field-meta.xml
<CustomField>
    <fullName>Salarypolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salary Policy</label>
    <referenceTo>Salary_Policy__c</referenceTo>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>