force-app/main/default/objects/Employee__c/fields/SalesTarget__c.field-meta.xml
<CustomField>
    <fullName>SalesTarget__c</fullName>
    <label>Sales Target</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>