force-app/main/default/objects/Employee__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <formula>Text(Owner:User.SalesTeam__c )</formula>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>