force-app/main/default/objects/Employee__c/fields/SocialInsuranceNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuranceNumber__c</fullName>
    <label>Social Insurance Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>