force-app/main/default/objects/Employee__c/fields/SpecialEmployee__c.field-meta.xml
<CustomField>
    <fullName>SpecialEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Employee</label>
    <type>Checkbox</type>
</CustomField>