force-app/main/default/objects/Employee__c/fields/StandardDependentDeductionperPerson__c.field-meta.xml
<CustomField>
    <fullName>StandardDependentDeductionperPerson__c</fullName>
    <label>Standard Dependent Deduction per Person</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>