force-app/main/default/objects/Employee__c/fields/Standardselfdeduction__c.field-meta.xml
<CustomField>
    <fullName>Standardselfdeduction__c</fullName>
    <label>Standard Self Deduction</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>