force-app/main/default/objects/Employee__c/fields/Temporaryresidenceaddress__c.field-meta.xml
<CustomField>
    <fullName>Temporaryresidenceaddress__c</fullName>
    <label>Temporary residence address</label>
    <type>TextArea</type>
</CustomField>