force-app/main/default/objects/Employee__c/fields/TimesbeingRejectedinTravelRequest__c.field-meta.xml
<CustomField>
    <fullName>TimesbeingRejectedinTravelRequest__c</fullName>
    <label>Times being Rejected in Travel Request</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>