force-app/main/default/objects/Employee__c/fields/TypeofEmployment__c.field-meta.xml
<CustomField>
    <fullName>TypeofEmployment__c</fullName>
    <label>Type of Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Employment</valueSetName>
    </valueSet>
</CustomField>