force-app/main/default/objects/Employee__c/fields/VieName__c.field-meta.xml
<CustomField>
    <fullName>VieName__c</fullName>
    <label>Vietnamese Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>