force-app/main/default/objects/Employee__c/fields/Visatype__c.field-meta.xml
<CustomField>
    <fullName>Visatype__c</fullName>
    <label>Visa Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>