force-app/main/default/objects/Employee__c/fields/Visavalidto__c.field-meta.xml
<CustomField>
    <fullName>Visavalidto__c</fullName>
    <label>Visa Valid To</label>
    <type>Date</type>
</CustomField>