force-app/main/default/objects/Employee__c/fields/WorkCycle__c.field-meta.xml
<CustomField>
    <fullName>WorkCycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Cycle</label>
    <referenceTo>WorkCycle__c</referenceTo>
    <relationshipLabel>Employee Information</relationshipLabel>
    <relationshipName>Employee_Information</relationshipName>
    <type>Lookup</type>
</CustomField>